Correction du bug /recipe/slug (ex lasagne)

--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APP_SECRET=3b63dd2fc6bcd16ccb8392d345ae412d
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+     DATABASE_URL="mysql://debian-sys-maint:llcoLs925VKoEb8X@127.0.0.1:3306/dbRecipeBook?serverVersion=8&charset=utf8mb4"
+##ATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
